# eulerangles-equals

./: .gitignore  CMakeLists.txt  README.md
include/: EulerAngles.h  Quaternion.h  util.h
test/: CMakeLists.txt
test/euler/: CMakeLists.txt  test.cpp
test/euler_simplify/: CMakeLists.txt  test.cpp
test/quat/: CMakeLists.txt  test.cpp
test/unite/: CMakeLists.txt  test.cpp
